[package]
name = "goathoof-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pthread-3ds = { git = "https://github.com/rust3ds/pthread-3ds" }
linker-fix-3ds = { git = "https://github.com/rust3ds/rust-linker-fix-3ds" }
ctru-rs = { git = "https://github.com/rust3ds/ctru-rs" }
ctru-sys = { git = "https://github.com/rust3ds/ctru-rs"}
citro3d = { git = "https://github.com/rust3ds/citro3d-rs" }
citro3d-sys = { git = "https://github.com/rust3ds/citro3d-rs"}
libc = "0.2.116"
gltf = "1.0.0"
